--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: Ryan Daniels
   description: Role to test for network issues to specified IP and port (TCP or UDP) from your Ansible hosts.  
   license: MIT
-  min_ansible_version: 2.6
+  min_ansible_version: 2.0
   platforms:
     - name: EL
       versions:
@@ -16,18 +16,12 @@ galaxy_info:
     - name: Fedora
       versions:
         - all
-    - name: Ubuntu
-      versions:
-        - all
     - name: GenericLinux
       versions:
         - all
         - any
-    - name: Debian
-      versions:
-        - all
   galaxy_tags:
     - system
-    - users
+    - network
 
 dependencies: []
